<resources>
    //login register
    <string name="app_name">AksaCarma</string>
    <string name="image_logo">image_logo</string>
    <string name="textView_login">Login</string>
    <string name="inputText_username">Username</string>
    <string name="inputText_password">Password</string>
    <string name="inputText_name">Name</string>
    <string name="button_login">Login</string>
    <string name="button_detection">Deteksi Kulit</string>
    <string name="button_register">Register</string>
    <string name="button_logout">Logout</string>
    <string name="button_save">Simpan</string>
    <string name="login_desc">Belum Mempunyai Akun ?</string>
    <string name="register_desc">Sudah Mempunyai Akun ?</string>
    <string name="textView_register">Register</string>
    <string name="error_textField">Isi terlebih dahulu</string>
    <string name="email_error">Masukkan alamat email yang valid!</string>
    <string name="password_error">Minimal 8 karakter password</string>
    //home
    <string name="title_home">Home</string>
    <string name="title_camera">Detection</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_update">Update Profile</string>
    <string name="profile_name">Nama Profile</string>
    <string name="initial_name">My Name</string>
    <string name="initial_hello">Hallo</string>
    <string name="initial_article">Article</string>
    <string name="profile_username">Nama Username</string>
    <string name="textview_camera">Silahkan masukkan gambar melalui galeri atau kamera. Lalu, klik Deteksi Kulit untuk mendeteksi penyakit kulit.</string>
    <string name="button_picture">Pilih Gambar</string>
    //list
    <string name="history_detection">Actinic keratosis basal cell carcinoma and other malignant lesions</string>
    <string name="desc_article">Deskripsi</string>
    <string name="title_result">Hasil Deteksi</string>
    <string name="title_google_result">Title</string>
    <string name="description_result">Herpes adalah kelompok virus yang dapat menyebabkan infeksi. Infeksi virus herpes umumnya ditandai dengan kulit kering, luka lepuh,</string>
    <string name="history_time">2023_06_02 07:23:41</string>
    <string name="result_detection">Hasil Deteksi : </string>
    <string name="name_disease">Nama Penyakit</string>
    <string name="prediction_result_error">Penyakit Tidak Terdeteksi</string>
    <string name="imageView_banner">banner</string>
    <string name="item_back">Back</string>
    <string name="google_result">Google Result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>